# cargo-remark

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
src/: lib.rs  main.rs  render.rs
src/cargo/: cli.rs  mod.rs  version.rs
src/remark/: index.rs  mod.rs  parse.rs
src/utils/: callback.rs  data_structures.rs  io.rs  mod.rs  timing.rs
templates/: index.jinja  layout.html  menu.html  remark-list.jinja  source-file.jinja
tests/data/remarks-1/: 37v4yjwjhlguzgkm.codegen.opt.yaml  remarks.67ea4a01cbc73fb0-cgu.0.codegen.opt.yaml  remarks.67ea4a01cbc73fb0-cgu.0.opt.opt.yaml
tests/data/remarks-similarity-join/src/: common.rs  main.rs  record.rs  util.rs
tests/data/remarks-similarity-join/yaml/: similarity_join.548e4531baa98255-cgu.0.opt.opt.yaml
tests/integration/: analyze.rs  build.rs  main.rs
tests/integration/utils/: mod.rs
